# crew-ai-cloud

./: pyproject.toml  requirements.txt
src/hitlcrew/: crew.py  main.py
src/hitlcrew/config/: agents.yaml  collect_personal_project_information.json
src/modifiedProject/: crew.py  main.py
src/modifiedProject/config/: tasks.yaml
